# ebpf-cache-profiler

./: .gitignore  README.md  experiments.md  meson.build
examples/: ebpf_main.c
include/: CacheProfiler.h  CacheProfilerApp.h  CacheSample.h  CacheSampleLoggerConfig.h  CsvCacheSampleLogger.h  EBpfCacheProfiler.h  ICacheProfiler.h  ICacheSampleLogger.h  Logger.h  ProfilingConfig.h  TerminalCacheSampleLogger.h  cache_profiler.h  logger.h  printmsg.h  profiler.h
perf_vs_ebpf/src/: analyze_perf_vs_ebpf.py
playground/: README.md
playground/experiments/: measure_perf_overhead.sh  perf_overhead_local_workloads.sh  perf_overhead_npb.sh  perf_overhead_pyperformance.sh  python_bst_slowdown_vs_profiler.sh  python_vs_profiler.sh  threaded_vs_profiler.sh
playground/lib/: experiment_common.sh  measure_perf_overhead.sh  measure_profiler_overhead.sh  playground_paths.sh
playground/tools/: plot_value_distributions.py  summarize_perf_overhead.py
playground/workloads/: python_bst_workload.py  python_memory_workload.py  python_random_bst_workload.py  threaded_memory_workload.cpp
src/: CacheProfiler.cpp  CacheProfilerApp.cpp  CsvCacheSampleLogger.cpp  EBpfCacheProfiler.cpp  Logger.cpp  Main.cpp  TerminalCacheSampleLogger.cpp  cache_profiler.c  cache_profiler_main.c  logger.c  printmsg.c  profiler.c  profiler_perf.c
src/bpf/: cache_sampler.bpf.c
src/client/: CliOptions.h  CliParsing.cpp  CliParsing.h  Main.cpp
